--- a/src/components/AddPost/AddPost.scss
+++ b/src/components/AddPost/AddPost.scss
@@ -10,6 +10,11 @@
     left: 0;
     z-index: 5;
 
+    @media screen and (max-width: $break-tablet) {
+        align-items: flex-end;
+        overflow-y: auto;
+    }
+
     #postContainer {
         @include flexCenter(column);
         width: 80%;
@@ -21,24 +26,48 @@
         box-shadow: 0px 0px 4px 4px #b9b9b9;
         position: relative;
 
+        justify-content: flex-start;
+
+        @media screen and (max-width: $break-tablet) {}
+
         i {
             position: absolute;
             top: 10px;
             left: 10px;
+
+            @media screen and (max-width: $break-tablet) {
+                top: 5px;
+                left: 5px;
+            }
         }
 
         #postTitle {
             @include flexSpaceAround(row);
             width: 80%;
-            height: 40%;
+            min-height: 50%;
             margin-bottom: 30px;
-            margin-top: 30px;
+            // margin-top: 30px;
             padding: 30px;
+            padding-bottom: 10px;
+
+            @media screen and (max-width: $break-tablet) {
+                min-height: 80%;
+                flex-direction: column;
+                margin: 10px 0;
+                padding: 5px;
+                justify-content: flex-start;
+            }
 
             #countryMap {
                 height: 100%;
                 width: 48%;
                 border-radius: 2px;
+
+                @media screen and (max-width: $break-tablet) {
+                    width: 100%;
+                    margin-bottom: 20px;
+                    height: 250px;
+                }
             }
 
             #postInfoTitle {
@@ -46,11 +75,40 @@
                 height: 100%;
                 width: 48%;
 
+                @media screen and (max-width: $break-tablet) {
+                    width: 100%;
+                }
+
                 h1 {
                     font-size: 3em;
                     font-family: $header-font;
                     color: $brand-color-dark;
+
+                    @media screen and (max-width: $break-tablet) {
+                        font-size: 2em;
+                    }
                 }
+
+                button {
+                    margin-bottom: 5px;
+                }
+            }
+
+        }
+
+        #addPostContent {
+            height: fit-content;
+            width: 100%;
+
+            #addPostImages {
+                height: 30%;
+                width: 100%;
+                margin-bottom: 20px;
+            }
+
+            #textFields {
+                min-height: fit-content;
+                margin-top: 40px;
             }
         }
     }
@@ -61,9 +119,9 @@
         height: 50px;
         border: none;
         border-radius: 1px;
-        background-color: $brand-color-dark;
-        color: $white-color;
-        // border: 1px solid $brand-color;
+        background-color: #fff;
+        color: $brand-color-dark;
+        border: 2px solid $brand-color-dark;
         font-size: 1.5em;
         margin: 15px;
     }
