--- a/src/components/FriendProfile/FriendProfile.scss
+++ b/src/components/FriendProfile/FriendProfile.scss
@@ -10,6 +10,10 @@
     z-index: 5;
     font-family: $content-font;
 
+    @media screen and (max-width: $break-tablet) {
+        align-items: flex-end;
+    }
+
     #friendProfileContainer {
         position: relative;
         padding: 30px;
@@ -17,17 +21,28 @@
         height: 80%;
         background-color: #fff;
         overflow-y: auto;
-        opacity: .8;
+        opacity: .9;
         z-index: 10;
         border-radius: 3px;
         box-shadow: 0px 0px 4px 4px #b9b9b9;
         @include flexCenter(column);
         justify-content: flex-start;
 
+        @media screen and (max-width: $break-tablet) {
+            width: 77%;
+            height: 80%;
+            padding: 10px;
+        }
+
         &>i {
             position: absolute;
             top: 15px;
             left: 15px;
+
+            @media screen and (max-width: $break-tablet) {
+                top: 7px;
+                left: 7px;
+            }
         }
 
         #friendProfileTitle {
@@ -38,6 +53,10 @@
             // height: 80vh;
             min-height: fit-content;
 
+            @media screen and (max-width: $break-tablet) {
+                width: 100%;
+            }
+
             #friendProfilePic {
                 @include flexCenter(row);
                 height: 20vw;
@@ -45,6 +64,7 @@
                 width: 20vw;
                 min-width: 175px;
                 border-radius: 50%;
+                margin-top: 30px;
 
                 img {
                     height: 90%;
@@ -60,6 +80,11 @@
                 width: 50%;
                 min-width: 220px;
                 @include flexSpaceAround(column);
+                justify-content: flex-start;
+
+                @media screen and (max-width: $break-tablet) {
+                    min-height: 60%;
+                }
 
                 // overflow-y: auto;
                 #colorPicker {
@@ -69,16 +94,31 @@
                 h1 {
                     font-size: 3.5em;
                     color: $brand-color-dark;
+
+                    @media screen and (max-width: $break-tablet) {
+                        font-size: 2.2em;
+                    }
                 }
 
                 h3 {
                     font-size: 2.5em;
                     color: $brand-color;
+
+                    @media screen and (max-width: $break-tablet) {
+                        font-size: 1.7em;
+                        margin-bottom: 5px;
+                    }
                 }
 
                 h4 {
                     font-size: 1.5em;
                     color: $accent-color;
+                    margin-bottom: 20px;
+
+                    @media screen and (max-width: $break-tablet) {
+                        font-size: 1em;
+                        margin-bottom: 10px;
+                    }
                 }
 
                 button {
@@ -90,6 +130,11 @@
                     background-color: rgba(255, 255, 255, 0.1);
                     color: $brand-color-dark;
                     margin-bottom: 10px;
+
+                    @media screen and (max-width: $break-tablet) {
+                        font-size: .9em;
+                        min-height: 35px;
+                    }
                 }
 
                 .visitedList {
@@ -106,9 +151,14 @@
             justify-content: space-between;
             height: fit-content;
             width: 80%;
+            margin-top: 30px;
+
+            @media screen and (max-width: $break-tablet) {
+                width: 90%;
+            }
 
             #friendProfilePost {
-                width: 80%;
+                width: 90%;
             }
 
             #profileImages {
@@ -125,6 +175,13 @@
                     width: auto;
                     height: auto;
                     object-fit: cover;
+
+                    @media screen and (max-width: $break-tablet) {
+                        max-height: 100%;
+                        height: auto;
+                        width: 90%;
+                        object-fit: contain;
+                    }
                 }
             }
         }
