--- a/src/components/ProfilePost/ProfilePost.scss
+++ b/src/components/ProfilePost/ProfilePost.scss
@@ -5,7 +5,7 @@
   width: 100%;
   margin: 20px 0;
   border: 1px solid $brand-color;
-  padding: 10px;
+  // padding: 10px;
   border-radius: 1px;
   @include flexSpaceBetween(column);
 
@@ -13,10 +13,19 @@
     @include flexSpaceBetween(row);
     width: 100%;
 
+    @media screen and (max-width: $break-tablet) {
+      @include flexSpaceBetween(column);
+    }
+
     .profileMap {
       height: 200px;
       width: 40%;
       border-radius: 1px;
+
+      @media screen and (max-width: $break-tablet) {
+        width: 90%;
+        margin-top: 15px;
+      }
     }
 
     #profilePostContent {
@@ -25,17 +34,29 @@
       height: fit-content;
       max-height: 200px;
 
+      @media screen and (max-width: $break-tablet) {
+        width: 90%;
+      }
+
       h1 {
         font-size: 2.5em;
         font-family: $header-font;
         color: $brand-color-dark;
-        margin-bottom: 10px;
+        margin: 10px 0;
+
+        @media screen and (max-width: $break-tablet) {
+          font-size: 2em;
+        }
       }
 
       h3 {
         font-size: 1.3em;
         font-family: $header-font;
         color: $brand-color;
+
+        @media screen and (max-width: $break-tablet) {
+          font-size: 1em;
+        }
       }
 
       button {
@@ -46,7 +67,12 @@
         color: $brand-color-dark;
         font-size: 1em;
         margin: 15px;
+        margin-bottom: 0;
         background: #fff;
+
+        @media screen and (max-width: $break-tablet) {
+          width: 100%;
+        }
       }
     }
   }
@@ -55,7 +81,8 @@
     height: fit-content;
     width: 100%;
     padding: 20px;
-    @include flexSpaceBetween(column);
+    padding-top: 0;
+    @include flexCenter(column);
   }
 
   .open {
