--- a/src/components/ViewPosts/ViewPosts.scss
+++ b/src/components/ViewPosts/ViewPosts.scss
@@ -17,20 +17,50 @@
         background-color: #fff;
         overflow-y: auto;
         z-index: 10;
-        border-radius: 20px;
+        border-radius: 2px;
         box-shadow: 0px 0px 4px 4px #b9b9b9;
+        color: $brand-color-dark;
+        position: relative;
+        @include flexCenter(column);
+        justify-content: flex-start;
+        align-items: center;
 
-        #countryMapView {
-            height: 30%;
-            width: 48%;
-            border-radius: 10px;
+        i {
+            position: absolute;
+            top: 15px;
+            left: 15px;
+            width: fit-content;
+
+            @media screen and (max-width: $break-tablet) {
+                top: 5px;
+                left: 5px;
+            }
         }
+
+        #viewPostsTitle {
+            @include flexSpaceBetween(row);
+            width: 90%;
+            min-height: 50%;
+            // height: fit-content;
+            font-family: $header-font;
+
+            #countryMapView {
+                height: 100%;
+                width: 100%;
+                border-radius: 2px;
+            }
+
+            h1 {
+                font-size: 3em;
+            }
+        }
+
 
         button {
             width: 48%;
             height: 50px;
             border: none;
-            border-radius: 5px;
+            border-radius: 1px;
             background-color: $brand-color-dark;
             color: $white-color;
             font-size: 1.5em;
