--- a/src/App.scss
+++ b/src/App.scss
@@ -13,6 +13,10 @@ $break-mobile: 400px;
 $break-tablet: 728px;
 $break-desktop: 998px;
 
+button:focus {
+    outline: none;
+}
+
 @mixin flexCenter($direction) {
     display: flex;
     justify-content: center;
@@ -36,6 +40,7 @@ $break-desktop: 998px;
 
 body {
     font-family: $header-font;
+    overflow: hidden;
 }
 
 .App {
@@ -44,5 +49,4 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // overflow: hidden;
 }
