--- a/src/components/FriendProfile/FriendProfile.scss
+++ b/src/components/FriendProfile/FriendProfile.scss
@@ -17,6 +17,7 @@
     #friendProfileContainer {
         position: relative;
         padding: 30px;
+        padding-top: 15px;
         width: 80%;
         height: 80%;
         background-color: #fff;
@@ -48,7 +49,7 @@
         #friendProfileTitle {
             @include flexSpaceAround(column);
             // justify-content: flex-start;
-            height: 100%;
+            height: 80%;
             width: 80%;
             // height: 80vh;
             min-height: fit-content;
@@ -64,7 +65,7 @@
                 width: 20vw;
                 min-width: 175px;
                 border-radius: 50%;
-                margin-top: 30px;
+                // margin-top: 30px;
 
                 img {
                     height: 90%;
@@ -151,7 +152,7 @@
             justify-content: space-between;
             height: fit-content;
             width: 80%;
-            margin-top: 30px;
+            margin-top: 40px;
 
             @media screen and (max-width: $break-tablet) {
                 width: 90%;
