--- a/src/components/ProfilePost/ProfilePost.scss
+++ b/src/components/ProfilePost/ProfilePost.scss
@@ -7,7 +7,10 @@
   border: 1px solid $brand-color;
   // padding: 10px;
   border-radius: 1px;
+  padding: 5px;
   @include flexSpaceBetween(column);
+  box-shadow: 0px 0px 3px 3px #e9e9e9;
+
 
   .profilePostMain {
     @include flexSpaceBetween(row);
@@ -19,8 +22,9 @@
 
     .profileMap {
       height: 200px;
-      width: 40%;
+      width: 50%;
       border-radius: 1px;
+      margin-bottom: 15px;
 
       @media screen and (max-width: $break-tablet) {
         width: 90%;
@@ -30,7 +34,7 @@
 
     #profilePostContent {
       @include flexSpaceAround(column);
-      width: 60%;
+      width: 50%;
       height: fit-content;
       max-height: 200px;
 
@@ -80,9 +84,30 @@
   #profilePostContent {
     height: fit-content;
     width: 100%;
-    padding: 20px;
-    padding-top: 0;
+    padding: 0 20px;
+    padding-bottom: 5px;
     @include flexCenter(column);
+    color: $brand-color-dark;
+    text-align: left;
+
+    h5 {
+      color: $brand-color;
+      font-size: 1.1em;
+      margin-top: 10px;
+    }
+
+    p {
+      font-size: 1em;
+    }
+
+    #editDelete {
+      text-align: right;
+
+      i {
+        margin: 5px;
+        margin-bottom: 0;
+      }
+    }
   }
 
   .open {
