--- a/src/components/ViewPosts/ViewPosts.scss
+++ b/src/components/ViewPosts/ViewPosts.scss
@@ -9,6 +9,10 @@
     left: 0;
     z-index: 5;
 
+    @media screen and (max-width: $break-tablet) {
+        align-items: flex-end;
+        overflow-y: auto;
+    }
 
     #viewPostsContainer {
         padding: 30px;
@@ -25,7 +29,12 @@
         justify-content: flex-start;
         align-items: center;
 
-        i {
+        @media screen and (max-width: $break-tablet) {
+            padding: 5px;
+            padding-top: 15px;
+        }
+
+        #close {
             position: absolute;
             top: 15px;
             left: 15px;
@@ -44,40 +53,99 @@
             // height: fit-content;
             font-family: $header-font;
 
+            @media screen and (max-width: $break-tablet) {
+                min-height: 60%;
+                flex-direction: column;
+                margin: 10px 0;
+                padding: 5px;
+                justify-content: flex-start;
+            }
+
             #countryMapView {
                 height: 100%;
-                width: 100%;
+                width: 50%;
                 border-radius: 2px;
+
+                @media screen and (max-width: $break-tablet) {
+                    width: 100%;
+                    margin-bottom: 20px;
+                    height: 250px;
+                }
             }
 
-            h1 {
-                font-size: 3em;
+            &>div {
+                width: 50%;
+
+                h1 {
+                    font-size: 3em;
+                }
+            }
+
+
+        }
+
+        #postContent {
+            margin: 20px 0 10px 0;
+            padding: 10px;
+            border: 1px solid $brand-color;
+            border-radius: 2px;
+            box-shadow: 0px 0px 3px 3px #e9e9e9;
+            width: 90%;
+
+            #postProfilePic {
+                max-height: 80px;
+                width: auto;
+                border-radius: 50%;
+            }
+
+            h2 {
+                font-size: 1.4em;
+                margin: 5px 0 10px 0;
+            }
+
+            h4 {
+                font-size: 1em;
+                margin-bottom: 10px;
+            }
+
+            #description {
+                text-align: left;
+                margin-bottom: 10px;
+
+                h3 {
+                    font-size: 1em;
+                    color: $brand-color;
+                }
+
+                p {
+                    font-size: .9em;
+                    margin: 5px 0;
+                }
+            }
+
+            #editDelete {
+                @include flexSpaceAround(row);
+                justify-content: flex-end;
+
+                i {
+                    width: fit-content;
+                    margin: 5px;
+                }
+
+            }
+
+            * {
+                width: 100%;
             }
         }
 
-
-        button {
-            width: 48%;
-            height: 50px;
-            border: none;
-            border-radius: 1px;
-            background-color: $brand-color-dark;
-            color: $white-color;
-            font-size: 1.5em;
-            margin-bottom: 15px;
-        }
-
-        #editDelete {
-            @include flexSpaceAround(row);
-
-        }
 
         #backToMap {
             width: 20%;
         }
 
-        * {
-            width: 100%;
-        }
+        // * {
+        //     width: 100%;
+        // }
     }
 }
