--- a/src/components/CustomPopup/CustomPopup.scss
+++ b/src/components/CustomPopup/CustomPopup.scss
@@ -8,22 +8,29 @@
     padding: 10px 0;
     align-items: center;
 
+    img {
+        max-width: 90%;
+        margin-bottom: 10px;
+        box-shadow: 0px 0px 4px 4px #b9b9b9;
+
+    }
+
     p {
-        font-size: 2em;
+        font-size: 1.5em;
         color: $brand-color-dark;
-        margin: 0 0 10px 0;
+        margin: 0 0 5px 0;
     }
 
     #popupButtons {
         height: fit-content;
-        width: 310px;
+        width: 180px;
         @include flexSpaceBetween(row);
 
         button {
             border: 1px solid $brand-color;
             background: #fff;
             color: $brand-color-dark;
-            width: 150px;
+            width: 90px;
             height: 40px;
         }
     }
