--- a/src/components/ImageScroll/ImageScroll.scss
+++ b/src/components/ImageScroll/ImageScroll.scss
@@ -10,6 +10,27 @@
     margin-bottom: 30px;
     margin-top: 0;
 
+    /* width */
+    &::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+    }
+
+    /* Track */
+    &::-webkit-scrollbar-track {
+        background: #eeeeee;
+    }
+
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+        background: #bdbdbd;
+    }
+
+    /* Handle on hover */
+    &::-webkit-scrollbar-thumb:hover {
+        background: #87bee0;
+    }
+
     img {
         object-fit: scale-down;
         display: inline-block;
