--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -142,8 +142,8 @@
 
     .menuItems {
         width: 95%;
-        height: 50%;
-
+        height: 46%;
+        padding-bottom: 4%;
         @include flexSpaceBetween(column);
 
         .iconDiv {
@@ -316,11 +316,11 @@
 
 @keyframes openSidebar {
     from {
-        width: 0;
+        width: 44px;
     }
 
     to {
-        width: fit-content;
+        width: 216px;
     }
 }
 
