--- a/src/components/Legend/Legend.scss
+++ b/src/components/Legend/Legend.scss
@@ -1,7 +1,7 @@
 @import '../../App.scss';
 
 #mapLegend {
-    position: absolute;
+    position: fixed;
     bottom: 20px;
     right: 15px;
     z-index: 1000;
