--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -10,6 +10,10 @@
   z-index: 5;
   font-family: $content-font;
 
+  button:hover {
+    cursor: pointer;
+  }
+
   @media screen and (max-width: $break-tablet) {
     align-items: flex-end;
   }
@@ -38,6 +42,10 @@
       position: absolute;
       top: 15px;
       left: 15px;
+
+      &:hover {
+        cursor: pointer;
+      }
 
       @media screen and (max-width: $break-mobile) {
         top: 7px;
