--- a/src/components/ViewPosts/ViewPosts.scss
+++ b/src/components/ViewPosts/ViewPosts.scss
@@ -41,6 +41,10 @@
             left: 15px;
             width: fit-content;
 
+            &:hover {
+                cursor: pointer;
+            }
+
             @media screen and (max-width: $break-tablet) {
                 top: 3px;
                 left: 3px;
