--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -81,6 +81,7 @@
           height: 90%;
           width: 90%;
           border-radius: 50%;
+          // border: 10px solid blue;
         }
 
       }
