--- a/src/components/LoginRegisterPopup/LoginRegisterPopup.scss
+++ b/src/components/LoginRegisterPopup/LoginRegisterPopup.scss
@@ -48,8 +48,7 @@
             height: 30%;
 
             h2 {
-                font-size: 4em;
-                color: $brand-color-dark;
+                @extend %header-h2;
 
                 img {
                     height: 1.5em;
@@ -58,10 +57,6 @@
 
                 @media screen and (max-width: $break-desktop) {
                     font-size: 3.5em;
-
-                    img {
-                        // height: 1.6em;
-                    }
                 }
 
                 @media screen and (max-width: $break-tablet) {
