--- a/src/components/CustomPopup/CustomPopup.scss
+++ b/src/components/CustomPopup/CustomPopup.scss
@@ -35,6 +35,7 @@
 
             &:hover {
                 cursor: pointer;
+                @extend %button-hover;
             }
         }
     }
