--- a/src/components/Legend/Legend.scss
+++ b/src/components/Legend/Legend.scss
@@ -259,6 +259,7 @@
                     }
 
                     &:hover {
+                        @extend %button-hover;
                         cursor: pointer;
                     }
                 }
