--- a/src/components/AddPost/AddPost.scss
+++ b/src/components/AddPost/AddPost.scss
@@ -125,6 +125,10 @@
         border: 2px solid $brand-color-dark;
         font-size: 1.5em;
         margin: 15px;
+
+        &:hover {
+            @extend %button-hover;
+        }
     }
 
     #addImages {
